# slai

./: .gitignore  Cargo.toml  README.md  download_slang.sh
.github/workflows/: ci.yaml
.run/: doc.run.xml  slai (cuda).run.xml  slai.run.xml  slai__cuda_.run.xml  slai__dx_.run.xml  slai__dx____cuda.run.xml
crates/slai/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/slai-bench/: Cargo.toml
crates/slai-bench/src/: main.rs
crates/slai-chat/: Cargo.toml  Dioxus.toml  README.md
crates/slai-chat/assets/styling/: main.css
crates/slai-chat/src/: chat_gpt2.rs  chat_llama2.rs  chat_template.rs  cli.rs  llm.rs  main.rs  prompt.rs  sampler.rs  segment_anything.rs
crates/slai-chat/src/components/: chat.rs  home.rs
crates/slai/shaders/slai/: batched_multiquery_attention.slang  conv_transpose_2d.slang  gemv_quant_q4_0x2.slang  gemv_quant_q4_1x2.slang  gemv_quant_q4_k.slang  gemv_quant_q5_0x2.slang  gemv_quant_q5_1x2.slang  gemv_quant_q5_k.slang  gemv_quant_q6_kx2.slang  gemv_quant_q8_0x2.slang  gemv_quant_q8_k.slang  get_rel_pos.slang  im2col.slang  layernorm.slang  rms_norm.slang  rope.slang  silu.slang  softmax.slang  unary.slang  win_part.slang
crates/slai/src/: context.rs  gguf.rs  lib.rs  quantized_matrix.rs  tensor_cache.rs
crates/slai/src/models/: mod.rs  sampler.rs
crates/slai/src/models/gpt2/: cpu.rs  mod.rs  transformer.rs
crates/slai/src/models/llama2/: cpu.rs  transformer.rs
crates/slai/src/models/segment_anything/: decode_mask.rs  encode_image.rs  encode_prompt.rs  fill_dense_pe.rs  io.rs  layernorm2d.rs  mod.rs  post_process_mask.rs
crates/slai/src/ops/: batched_multiquery_attention.rs  conv_transpose_2d.rs  gemv_quant.rs  get_rel_pos.rs  im2col.rs  layernorm.rs  mod.rs  quantization.rs  quantization.wgsl  quantization_test.wgsl  rms_norm.rs  rope.rs  silu.rs  softmax.rs  unary.rs  win_part.rs
