[package]
name = "slai"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform GPU LLM inference."
homepage = "https://slai.rs"
repository = "https://github.com/dimforge/slai"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
cuda = ["slang-hal/cuda"]

[dependencies]
slang-hal = {  version = "0.1" }
stensor = "0.1"
nalgebra = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true, features = ["extern_crate_std"] }
anyhow = { workspace = true }
async-channel = { workspace = true }
thiserror = { workspace = true }
encase = { workspace = true }
uuid = { version = "1" }
smallvec = "1"
dashmap = "6"
include_dir = "0.7"

# For tokenizer. Move behind feature?
byteorder = "1"
ordered-float = "4"
rand = "0.8"
regex = "1.10.5"
serde_json = "1.0.127"

# For wasm?
getrandom = { version = "0.2.15", features = ["js"] }

# For tensor cache hack
async-std = { version = "1", features = ["attributes"] }

# For debugging.
log = "0.4"

[dev-dependencies]
futures-test = "0.3"
serial_test = "3"
nalgebra = { version = "0.34", features = ["rand"] }
approx = "0.5"
async-std = { version = "1", features = ["attributes"] }
half = "2"

## For examples
clap = { version = "4.5.8", features = ["derive"] }
futures = "0.3.30"
memmap2 = "0.9.4"
num-derive = "0.4"

[build-dependencies]
minislang = "0.1"
stensor = "0.1" # To access its shaders at compile-time.
